<resources>
    <string name="register_screen_title">Register</string>
    <string name="gender">Gender</string>
    <string name="M">M</string>
    <string name="F">F</string>
    <string name="confirmpassword">Confirm</string>
    <string name="preference">Preference</string>
    <string name="PreA">A</string>
    <string name="PreB">B</string>
    <string name="PreC">C</string>
    <string name="occupation">Occupation</string>
    <string name="Employed">Employed</string>
    <string name="Business">Business</string>
    <string name="Doctor">Doctor</string>
    <string name="IT">IT</string>
    <string name="Law">Law</string>
    <string name="Other">Other</string>
    <string name="education">Education</string>
    <string name="Graduate">Graduate</string>
    <string name="Post_Graduate">Post Graduate</string>
    <string name="Engineer">Engineer</string>
    <string name="MBA">MBA</string>
    <string name="location">Location</string>
    <string name="brand">Brand/Model</string>
    <string name="Scratch_Code">Scratch Code:</string>
    <string name="Date_of_Birth">Date of Birth:</string>
    <string name="Select_Gateway">Select Gateway:</string>
    <string name="GPRS_Gate">GPRS</string>
    <string name="Pri_Gate">Primary SMS</string>
    <string name="Sec_Gate">Secondary SMS</string>
    <string name="Submit">Submit</string>
    <string name="hello">Hello World, MobiSuite!</string>
    <string name="app_name">MobiSuite</string>
    <string name="backup_contact">Backup Contact</string>
    <string name="restore_contact">Restore Contact</string>
    <string name="anti_virus">Anti Virus</string>
    <string name="anti_malware">Anti Malware</string>
    <string name="contacts_backup">Contacts Backup</string>
    <string name="settings">Settings</string>
    <string name="fake_sms">Fake SMS</string>
    <string name="fake_call">Fake Call</string>
    <string name="mass_sending_sms">Mass-sending SMS</string>
    <string name="anti_theft">Anti Theft</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="btn_title_back">back</string>
    <string name="password">Password</string>
    <string name="smart_reject_sensor">Smart Reject Sensor</string>
    <string name="incoming_call_control">Incoming Call Control</string>
    <string name="choose_mode">Choose mode</string>
    <string name="call_list">Call List</string>
    <string name="incoming_call_list">Incoming Call List</string>
    <string name="choose_the_list">Choose the list</string>
    <string name="lock_screen_keypad">Lock screen &amp; keypad</string>
    <string name="sim_whitelist">SIM Whitelist</string>
    <string name="contact_number">Contact Number</string>
    <string name="hide_folders">Hide Folders</string>
    <string name="hide_sms">Hide SMS</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_new_password_again">Enter new password again</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="update_frequency">Update frequency</string>
    <string name="once_a_day">Once a day</string>
    <string name="scan_applications">Scan applications</string>
    <string name="scan_applications_summary">Scan applications after install</string>
    <string name="scan_files">Scan files</string>
    <string name="scan_files_summary">Scan files after download file</string>
    <string name="scan_on_mount">Scan on mount</string>
    <string name="scan_on_mount_summary">Scan after disconnecting from PC</string>
    <string name="show_icon">Show icon</string>
    <string name="show_icon_summary">Always show the icon in the notice board</string>
    <string name="start_automatically">Start Automatically</string>
    <string name="start_automatically_summary">Scan service will be start up automatically after boot</string>
    <string name="backup_reminder">Backup Reminder</string>
    <string name="backup_reminder_summary">Set the notify of contact information showing or not.</string>
    <string name="reset_state">Reset State</string>
    <string name="reset_state_summary">Reset backup/restore state</string>
    <string name="off">Off</string>
    <string name="whitelist_mode">Whitelist Mode</string>
    <string name="blacklist_mode">Blacklist Mode</string>
    <string name="whitelist">White List</string>
    <string name="blacklist">Black List</string>
    <string name="privacy">Privacy</string>
    <string name="call_filter">Call Filter</string>
    <string name="sms_scheduler">SMS Scheduler</string>
    <string name="scan_device">Scan Device</string>
    <string name="scan_device_summary">Scans all installed applications</string>
    <string name="scan_sdcard">Scan SD Card</string>
    <string name="scan_sdcard_summary">Scans all files on SD Card</string>
    <string name="user_scan">User Scan</string>
    <string name="user_scan_summary">Select which file/directory to scan</string>
    <string name="schedule_scan">Schedule Scan</string>
    <string name="schedule_scan_summary">Schedule scan at a specified time</string>
    <string name="update_virus_library">Update Virus Library</string>
    <string name="update_virus_library_summary">Update virus library from server</string>
    <string name="anti_virus_settings">Anti Virus Settings</string>
    <string name="anti_virus_settings_summary">Set the Anti Virus</string>
    <string name="task_manager">Task Manager</string>
    <string name="task_manager_summary">Show process/task/service list, including stopping, kill, un-installing etc.</string>
    <string name="application_permission">Application Permission</string>
    <string name="application_permission_summary">Get installed application list and permission details.</string>
    <string name="application_whitelist">Application Whitelist</string>
    <string name="application_whitelist_summary">Add/delete white list of application.</string>
    <string name="sos_numbers">SOS Numbers</string>
    <string name="protected_content">Protected Content</string>
    <string name="backup">Backup</string>
    <string name="backup_summary">Backup the contacts from the server</string>
    <string name="restore">Restore</string>
    <string name="restore_summary">Restore the contacts from the server</string>
    <string name="contacts_backup_settings_summary">Set the backup config</string>
    <string name="private_folders">Private Folders</string>
    <string name="private_contacts">Private Contacts</string>
    <string name="filter_list">Filter List</string>
    <string name="schedule_sms">Schedule SMS</string>
    <string name="scheduled_list">Scheduled List</string>
    <string name="bulk_sms">Bulk SMS</string>
    <string name="sms_templates">SMS Templates</string>
    <string name="schedule_san">Schedule Scan</string>
    <string name="enable_schedule_scan"> Enable schedule scan</string>
    <string name="the_scan_performed_at">The scan will be performed at:</string>
    <string name="repetition">Repetition:</string>
    <string name="one_time_event">One-time event</string>
    <string name="schedule_scan_type">Schedule scan type:</string>
    <string name="user_scan_file_path">User scan file path:</string>
    <string name="default_path">/  (scan all files)</string>
    <string name="set_the_scan_file_path">Set the scan file path</string>
    <string name="button_apply">Apply</string>
    <string name="root_path">/</string>
    <string name="root">root</string>
    <string name="scan">Scan</string>
    <string name="back">Back</string>
    <string name="there_are_contacts_backup">There are 0 contacts to backup!</string>
    <string name="select_gateway">Select Gateway</string>
    <string name="gprs">GPRS</string>
    <string name="restore_contacts">Restore Contacts</string>
    <string name="restoring_backed_up_contacts_confirm">Restoring backed up contacts from the server may create duplicates on your device if older contacts exist. Proceed?</string>
    <string name="contacts_backup_settings">Contacts Backup Settings</string>
    <string name="mobisuite_state_reset">MobiSuite state has been reset!</string>
    <string name="add_new_folder">Add New Folder</string>
    <string name="select_folder">Select Folder</string>
    <string name="selected_file_can_not_be_write">Selected file can not be write.</string>
    <string name="add_from_phonebook">Add from phonebook</string>
    <string name="add_manually">Add \nmanually</string>
    <string name="select_smss_to_hide">Select SMSs to Hide</string>
    <string name="disabled">Disabled</string>
    <string name="selected_contacts">Selected Contacts</string>
    <string name="all_contacts">All Contacts</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="have_on_privacy_folder">Have no privacy folders, you can click add new folder button to add privacy folder.</string>
    <string name="the_select_folder_exist">The select folder is exist in privacy folder!</string>
    <string name="have_on_privacy_contact">Have no privacy contact, you can click add button to add privacy contact.</string>
    <string name="constact_have_no_number">The constact have no number!</string>
    <string name="select_number">Select number</string>
    <string name="number_info">Number information</string>
    <string name="is_exit">is exist!</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="input_the_number">Please enter Number!</string>
    <string name="no_name">No Name</string>
    <string name="add_new_list">Add new list</string>
    <string name="add_new_filter_list">Add New Filter List</string>
    <string name="list_name">List Name:</string>
    <string name="list_action">List Action:</string>
    <string name="reject">Reject</string>
    <string name="sms_auto_response">SMS Auto Response:</string>
    <string name="submit">Submit</string>
    <string name="filter_list_settings">Filter List Settings</string>
    <string name="incoming_control_text_summary">Choose mode</string>
    <string name="active_filter_list">Active Filter List</string>
    <string name="active_list_text_summary">Choose the list</string>
    <string name="have_on_filter_list">Have no filter list, you can click add button to add filter list.</string>
    <string name="edit_filter_list">Edit Filter List</string>
    <string name="reject_with_sms">Reject with SMS</string>
    <string name="information">Information</string>
    <string name="please_input_list_name">Please input list name!</string>
    <string name="the_list_name_is_exit">The list is exist!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_the_selected_list">Delete the selected filter list?</string>
    <string name="delete_the_selected_template">Delete the selected SMS template?</string>
    <string name="filter_number_list">Filter Number List</string>
    <string name="have_on_phone_number">The list have no phone number, you can click add button to add phone number.</string>
    <string name="is_exit_in">is exist in</string>
	<string name="do_you_want">. Do you want continue to add the phone number in the call list?</string>
	<string name="have_no">Have no</string>
	<string name="you_can_add_filter_list">you can add filter list in the Filter List management interface.</string>
	<string name="name_colon">Name:</string>
	<string name="number_colon">Number:</string>
	<string name="content">Content:</string>
	<string name="schedule">Schedule</string>
	<string name="schedule_time">Schedule Time:</string>
	<string name="set_date">Set Date</string>
	<string name="set_time">Set Time</string>
</resources>