<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?contact_card_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@id/cfg_main_panel"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="?activity_title_bg" >

        <Button
            android:id="@id/btn_title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:background="@drawable/btn_title_back_selector"
            android:text="@string/btn_title_back"
            android:textColor="@color/white"
            android:textSize="16.0sp" />

        <TextView
            android:id="@id/textview_top_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="#ffffffff"
            android:textSize="18.0sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/ScrollView_Main"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <LinearLayout
            android:id="@+id/LinearLayout_Main"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="18.0dip" >

            <TextView
                android:id="@+id/TextView_01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_password"
                android:textColor="@color/text_color"
                android:textSize="18.0sp" />

            <EditText
                android:id="@+id/currentpassword_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/text_select"
                android:gravity="top|left|center"
                android:hint="@string/enter_current_password"
                android:maxLength="64"
                android:minHeight="30.0dip"
                android:padding="8.0dip"
                android:inputType="textPassword"
                 />

            <TextView
                android:id="@+id/TextView_02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@color/text_color"
                android:textSize="18.0sp" />
            <EditText
                android:id="@+id/newpassword_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/text_select"
                android:gravity="top|left|center"
                android:hint="@string/enter_new_password"
                android:maxLength="64"
                android:minHeight="30.0dip"
                android:padding="8.0dip"
                android:inputType="textPassword"
                 />
             <TextView
                android:id="@+id/TextView_03"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat_password"
                android:textColor="@color/text_color"
                android:textSize="18.0sp" />
            <EditText
                android:id="@+id/repeatpassword_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/text_select"
                android:gravity="top|left|center"
                android:hint="@string/enter_new_password_again"
                android:maxLength="64"
                android:minHeight="30.0dip"
                android:padding="8.0dip"
                android:inputType="textPassword"
                 />
           
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/LinearLayout_Other"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_height="40.0dip"
            android:layout_marginBottom="5.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/button_common_selector"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="@dimen/text_btn_common" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="40.0dip"
            android:layout_marginBottom="5.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/button_common_selector"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/text_btn_common" />
    </LinearLayout>

</LinearLayout>