<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="?contact_card_bg"
     android:minWidth="1024.0dip"
    >
      <TextView android:id="@+id/dialog_title_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:text="@string/restore_contacts"
        android:textColor="@color/text_color"
        android:textSize="18.0sp"
        android:paddingLeft="12.0dip"
        />
     <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/devideline"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        />

    <TextView android:id="@+id/message_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:textColor="#ff404040"
        android:textSize="16.0sp"
        android:text="@string/restoring_backed_up_contacts_confirm"
        />
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        >

        <Button
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_height="40.0dip"
            android:layout_marginBottom="5.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/button_common_selector"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="@dimen/text_btn_common" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="40.0dip"
            android:layout_marginBottom="5.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/button_common_selector"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/text_btn_common" />
    </LinearLayout>
</LinearLayout>