<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?contact_card_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/cfg_main_panel"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="?activity_title_bg" >

        <Button
            android:id="@+id/btn_title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:background="@drawable/btn_title_back_selector"
            android:text="@string/btn_title_back"
            android:textColor="@color/white"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/textview_top_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/filter_list"
            android:textColor="#ffffffff"
            android:textSize="18.0sp" />
    </RelativeLayout>

      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="10.0dip"
        >

        <Button
            android:id="@+id/white_list_btn"
            android:layout_width="0dp"
            android:layout_height="40.0dip"
            android:layout_marginBottom="5.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/button_common_selector"
            android:text="@string/whitelist"
            android:textColor="@color/black"
            android:textSize="@dimen/text_btn_common" />

        <Button
            android:id="@+id/black_list_btn"
            android:layout_width="0dp"
            android:layout_height="40.0dip"
            android:layout_marginBottom="5.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/button_common_selector"
            android:text="@string/blacklist"
            android:textColor="@color/black"
            android:textSize="@dimen/text_btn_common" />
    </LinearLayout>
   <ListView
        android:id="@+id/filter_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12.0dip"
        android:layout_marginRight="12.0dip"
        android:layout_marginTop="10.0dip"
        android:layout_weight="1.0" 
        android:cacheColorHint="#00000000"
        android:listSelector="@drawable/listview_selector"
        android:scrollbars="none"
        android:divider="#00000000"
        />
     <Button
        android:id="@+id/add_new_list_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:layout_marginLeft="30.0dip"
        android:layout_marginRight="30.0dip"
        android:layout_marginTop="5.0dip"
        android:background="@drawable/button_common_selector"
        android:text="@string/add_new_list"
        android:textColor="@color/black"
        android:textSize="@dimen/text_btn_common" />
</LinearLayout>