<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?contact_card_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/cfg_main_panel"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="?activity_title_bg" >

        <Button
            android:id="@+id/btn_title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:background="@drawable/btn_title_back_selector"
            android:text="@string/btn_title_back"
            android:textColor="@color/white"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/textview_top_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/backup_contact"
            android:textColor="#ffffffff"
            android:textSize="18.0sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/cfg_main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:fadingEdge="none"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/cfg_main_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingBottom="12.0dip" >
              <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12.0dip"
                android:paddingRight="12.0dip"
                android:paddingTop="15.0dip"
                android:text="@string/there_are_contacts_backup"
                android:textColor="@color/text_color"
                android:textSize="14.0sp" />
             <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12.0dip"
                android:paddingRight="12.0dip"
                android:paddingTop="15.0dip"
                android:text="@string/select_gateway"
                android:textColor="@color/text_color"
                android:textSize="18.0sp" />
              <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="12.0dip"
                android:paddingRight="12.0dip" >

                <RelativeLayout
                    android:id="@+id/layout_select_gateway"
                    android:layout_width="fill_parent"
                    android:layout_height="50.0dip"
                    android:layout_marginTop="5.0dip"
                    android:background="@drawable/setting_single"
                    android:clickable="true"
                    android:focusable="true" >

                    <TextView
                        android:id="@+id/select_gateway_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="9.0dip"
                        android:padding="10.0dip"
                        android:text="@string/gprs"
                        android:textColor="#ff2d2d2d"
                        android:textSize="18.0sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15.0dip"
                        android:background="@drawable/item_go_icon" />
                </RelativeLayout>
            </LinearLayout>
            
            <Button
                android:id="@+id/backup_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_common_selector"
                android:layout_marginLeft="24.0dip"
                android:layout_marginRight="24.0dip"
                android:layout_marginTop="25.0dip"
                android:text="@string/backup"
                android:textColor="@color/black"
                android:textSize="@dimen/text_btn_common" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>